log/build_2025-04-20_13-55-48/py_pubsub/stderr.log
  File "/home/holmesa8/csci597f/labs/ros-lab-2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/publisher.py", line 113
    plt.plot(np.arange(len(self.collect), self.collect)
            ^
SyntaxError: '(' was never closed

